--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-    background-color: green;
+    background-color: red;
     color: white;
     text-align: center;
     padding: 1rem;
